[metadata]
author = Jörn Heissler
author_email = NOSPAM-hacmec@joern.heissler.de
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
description = hACMEc demo application
keywords =
    ACME
    X.509
license = MIT
long_description = file: README.rst
name = hacmec-demo
url = https://github.com/joernheissler/hacmec-demo
version = attr: hacmec_demo.VERSION

[options]
include_package_data = False
install_requires =
    aiodns
    aiohttp
    asn1crypto
    cchardet
    cryptography
    cryptokey
    dnspython
    hacmec
    PyYAML
packages = find:
python_requires = >= 3.7
zip_safe = True

[options.package_data]
hacmec_demo =
    py.typed

[options.entry_points]
console_scripts =
    hacmec-demo = hacmec_demo.__main__:main

[bdist_wheel]
python-tag = py3

[mypy]
no_implicit_optional = True
# mypy_path = stubs
